added three javascripts projects

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h2 class="section-heading">My Projects</h2>
         <div class="projects-wrapper">
           <div class="landings">
-            <h3 class="landings__heading">Landings</h3>
-            <div class="landings__wrapper center">
+            <h3 class="projects__heading">Landings</h3>
+            <div class="wrap center">
               <div class="project">
                 <div class="project__text">
                   <h2 class="project__name">Apple</h2>
@@ -151,6 +151,37 @@
                 </div>
                 <img class="project__img" src="images/landings/project-11.jpg" alt="Project 11">
                 <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/furniture/">Go to Github Pages</a>
+              </div>
+            </div>
+          </div>
+          <div class="js-projects">
+            <h3 class="projects__heading">JavaScript projects</h3>
+            <div class="wrap center">
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Music-player</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / JS</h4>
+                </div>
+                <img class="project__img" src="images/javascript projects/project 1.png" alt="Music player">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Music-player/">Go to Github Pages</a>
+              </div>
+
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Aim game</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / JS</h4>
+                </div>
+                <img class="project__img" src="images/javascript projects/project 2.png" alt="Music player">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Aim-mini-game/">Go to Github Pages</a>
+              </div>
+
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Drag and Drop</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / JS</h4>
+                </div>
+                <img class="project__img" src="images/javascript projects/project 3.png" alt="Music player">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Drag-and-Drop/">Go to Github Pages</a>
               </div>
             </div>
           </div>
