added one js project

--- a/app/index.html
+++ b/app/index.html
@@ -171,17 +171,17 @@
                   <h2 class="project__name">Aim game</h2>
                   <h4 class="project__tecnologies">HTML / CSS / JS</h4>
                 </div>
-                <img class="project__img" src="images/javascript projects/project 2.png" alt="Music player">
+                <img class="project__img" src="images/javascript projects/project 2.png" alt="Aim game">
                 <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Aim-mini-game/">Go to Github Pages</a>
               </div>
 
               <div class="project">
                 <div class="project__text">
-                  <h2 class="project__name">Drag and Drop</h2>
+                  <h2 class="project__name">Slider</h2>
                   <h4 class="project__tecnologies">HTML / CSS / JS</h4>
                 </div>
-                <img class="project__img" src="images/javascript projects/project 3.png" alt="Music player">
-                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Drag-and-Drop/">Go to Github Pages</a>
+                <img class="project__img" src="images/javascript projects/project 3.png" alt="Slider">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Full-screen-slider/">Go to Github Pages</a>
               </div>
             </div>
           </div>
