--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="wrap center">
               <div class="project">
                 <div class="project__text">
-                  <h2 class="project__name">Music-player</h2>
+                  <h2 class="project__name">Music player</h2>
                   <h4 class="project__tecnologies">HTML / CSS / JS</h4>
                 </div>
                 <img class="project__img" src="images/javascript projects/project 1.png" alt="Music player">
@@ -168,10 +168,28 @@
 
               <div class="project">
                 <div class="project__text">
+                  <h2 class="project__name">Sign In/Up form</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / JS</h4>
+                </div>
+                <img class="project__img" src="images/javascript projects/project 2.png" alt="Sign In/Up form">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Sign-in-up-form/">Go to Github Pages</a>
+              </div>
+
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Sticky notes</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / JS</h4>
+                </div>
+                <img class="project__img" src="images/javascript projects/project 3.png" alt="Sticky notes">
+                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/sticky-notes/">Go to Github Pages</a>
+              </div>
+
+              <div class="project">
+                <div class="project__text">
                   <h2 class="project__name">Aim game</h2>
                   <h4 class="project__tecnologies">HTML / CSS / JS</h4>
                 </div>
-                <img class="project__img" src="images/javascript projects/project 2.png" alt="Aim game">
+                <img class="project__img" src="images/javascript projects/project 4.png" alt="Aim game">
                 <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Aim-mini-game/">Go to Github Pages</a>
               </div>
 
@@ -180,10 +198,40 @@
                   <h2 class="project__name">Slider</h2>
                   <h4 class="project__tecnologies">HTML / CSS / JS</h4>
                 </div>
-                <img class="project__img" src="images/javascript projects/project 3.png" alt="Slider">
+                <img class="project__img" src="images/javascript projects/project 5.png" alt="Slider">
                 <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Full-screen-slider/">Go to Github Pages</a>
               </div>
             </div>
+          </div>
+          <div class="react-apps">
+            <h3 class="projects__heading">React applications</h3>
+            <div class="wrap center">
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Marvel</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / ReactJS</h4>
+                </div>
+                <img class="project__img" src="images/react projects/project 1.png" alt="Marvel website">
+                <a class="project__link" target="_blank" href="https://github.com/dmitrycrockodile/Marvel-App">Go to Github</a>
+              </div>    
+
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">Employees List</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / ReactJS</h4>
+                </div>
+                <img class="project__img" src="images/react projects/project 2.png" alt="Employees List">
+                <a class="project__link" target="_blank" href="https://github.com/dmitrycrockodile/Employees-application">Go to Github</a>
+              </div>    
+
+              <div class="project">
+                <div class="project__text">
+                  <h2 class="project__name">To do list</h2>
+                  <h4 class="project__tecnologies">HTML / CSS / ReactJS</h4>
+                </div>
+                <img class="project__img" src="images/react projects/project 3.png" alt="To do list">
+                <a class="project__link" target="_blank" href="https://github.com/dmitrycrockodile/todo-list">Go to Github</a>
+              </div>      
           </div>
         </div>
       </section>
@@ -223,21 +271,7 @@
 
       <!-- footer -->
       <footer class="footer center">
-        <div class="social-media">
-          <a class="social-media__link" aria-label="Link to github" href="">
-            <i class="fab fa-github-square" aria-label="github logo"></i>
-          </a>
-          <a class="social-media__link" aria-label="Link to youtube" href="">
-            <i class="fab fa-youtube" aria-label="youtube logo"></i>
-          </a>
-          <a class="social-media__link" aria-label="Link to facebook" href="">
-            <i class="fab fa-facebook-square" aria-label="facebook logo"></i>
-          </a>
-          <a class="social-media__link" aria-label="Link to instagram" href="">
-            <i class="fab fa-instagram-square" aria-label="instagram logo"></i>
-          </a>
-        </div>
-        <p class="footer__copyright">Copyright &copy; CodeAndCreate. All rights reserved</p>
+        <p class="footer__copyright">Thank you for watching my summary!</p>
       </footer>
       <!-- end of footer -->
     </div>
