--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 
       <!-- footer -->
       <footer class="footer center">
+        <p class="footer__copyright">I consent to the processing of my personal data for the purposes of the recruitment process (in accordance with the Act of 10 May 2018 on the protection of personal data (Journal of Laws of 2018, item 1000) and in accordance with the Regulation of the European Parliament and the Council ( EU) 2016/679 of 27 April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (GDPR)).</p>
         <p class="footer__copyright">Thank you for watching my summary!</p>
       </footer>
       <!-- end of footer -->
