--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
                   <h4 class="project__tecnologies">HTML / CSS / ReactJS</h4>
                 </div>
                 <img class="project__img" src="images/react projects/project 1.png" alt="Marvel website">
-                <a class="project__link" target="_blank" href="https://dmitrycrockodile.github.io/Marvel-App/">Go to Github Pages</a>
+                <a class="project__link" target="_blank" href="https://marvel-test-appl.herokuapp.com/">Go to Heroku</a>
               </div>    
 
               <div class="project">
